# FastHTMX

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  create_fastapi_app.py  main.py
app/api/api_v1/: __init__.py  api.py
app/api/api_v1/endpoints/: __init__.py  clicker.py  examples.py  products.py  users.py
app/celery/: celery_app.py  tasks.py
app/core/: __init__.py  config.py  middleware.py  redis.py
app/core/models/: __init__.py  base.py  db_helper.py
app/crud/: users.py
app/models/: __init__.py
app/templates/: base.html  index.html
app/templates/clicker/: index.html
app/templates/clicker/clicker-components/: clicker-body.html
app/templates/components/: footer-to-index.html  loading-animation.html  trash-icon.html
app/templates/examples/components/: footer.html
app/templates/examples/hover/: show-hover.html
app/templates/examples/ping/: show-ping.html
app/templates/products/: list.html
app/templates/products/components/: form.html
app/utils/: case_converter.py
tests/: __init__.py  test_api.py  test_main.http
tests/yandex/: A_find_minimal_word.py
